--- a/LoginPage/LoginCSS.css
+++ b/LoginPage/LoginCSS.css
@@ -29,18 +29,19 @@ body {
 }
 
 .navbar {
-    background: #222035;
-    width: 40px;
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    border-top-right-radius: 1.25rem;
-    border-bottom-right-radius: 1.25rem;
-    transition: ease-in-out 0.3s;
-    z-index: 1;
-    color: white;
+        background: #222035;
+            width: 40px;
+            position: fixed;
+            overflow: hidden;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            border-top-right-radius: 1.25rem;
+            border-bottom-right-radius: 1.25rem;
+            transition: ease-in-out 0.3s;
+            z-index: 1;
+            color: white;
+            overflow: scroll;
 }
 
 .menu--icon {
@@ -139,6 +140,13 @@ section{
     box-shadow: 1px 1px 10px #222035ec;
     color: white;
     margin-bottom: 40%;
+}
+
+.container--no--bg{
+    border-radius: 10px;
+        width: 100%;
+        color: white;
+        
 }
 .main--glass--effect {
     box-shadow: 0 0 50px rgba(34, 32, 53, 0.9);
@@ -280,9 +288,11 @@ a:visited{
     color: #fff;
     text-decoration: none;
 }
-.user--settings i:hover{
-    padding: 20px;
-    background-color: #343151;
+.user--settings i:hover,
+.user--settings a:visited
+{
+    padding: 10px;
+    background-color: #534f78;
     color: #fff;
     transition: ease-in-out 0.2s;
     border-radius: 20px;
@@ -294,4 +304,7 @@ a:visited{
             justify-content: center;
             text-align: center;
     }
+}
+.user--return--icon{
+    float: left;
 }
